// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegacyTextHitTestTest BidirectionalTextPressable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 2 times.",
    "TextRangePattern.GetText": "Pressed: 2 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "103, 19",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyTextHitTestTest BidirectionalTextPressableEdgeCaseNotPressable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 1 times.",
    "TextRangePattern.GetText": "Pressed: 1 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "103, 19",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyTextHitTestTest BidirectionalTextSeparateRunsEdgeCasePressable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 1 times.",
    "TextRangePattern.GetText": "Pressed: 1 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "103, 19",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyTextHitTestTest BidirectionalTextSeparateRunsPressable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 2 times.",
    "TextRangePattern.GetText": "Pressed: 2 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "103, 19",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyTextHitTestTest InsertedVirtualTextPressable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 1 times.",
    "TextRangePattern.GetText": "Pressed: 1 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "103, 19",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyTextHitTestTest LTRTextInRTLFlowPressable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 1 times.",
    "TextRangePattern.GetText": "Pressed: 1 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "103, 19",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyTextHitTestTest MultilineRTLTextEdgeCaseNotPressable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 1 times.",
    "TextRangePattern.GetText": "Pressed: 1 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "103, 19",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyTextHitTestTest MultilineRTLTextPressable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 2 times.",
    "TextRangePattern.GetText": "Pressed: 2 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "103, 19",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyTextHitTestTest MultilineTextPressable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 1 times.",
    "TextRangePattern.GetText": "Pressed: 1 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "103, 19",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyTextHitTestTest RTLTextInRTLFlowPressable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 1 times.",
    "TextRangePattern.GetText": "Pressed: 1 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "103, 19",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyTextHitTestTest RTLTextPressable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 1 times.",
    "TextRangePattern.GetText": "Pressed: 1 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "103, 19",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyTextHitTestTest TextPressableWithVirtualText 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 1 times.",
    "TextRangePattern.GetText": "Pressed: 1 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "103, 19",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyTextHitTestTest ToggleVirtualTextPressable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 1 times.",
    "TextRangePattern.GetText": "Pressed: 1 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "103, 19",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyTextHitTestTest VirtualTextPressable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 1 times.",
    "TextRangePattern.GetText": "Pressed: 1 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "103, 19",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacyTextHitTestTest WrappedLTRInRTLFlowEdgeCaseNotPressable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 1 times.",
    "TextRangePattern.GetText": "Pressed: 1 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "103, 19",
    "Visual Type": "SpriteVisual",
  },
}
`;
